--- a/chart/helm-operator/Chart.yaml
+++ b/chart/helm-operator/Chart.yaml
@@ -1,17 +1,17 @@
 apiVersion: v1
-appVersion: "1.0.0-rc7"
-version: 0.5.0
-kubeVersion: ">=1.11.0-0"
-name: helm-operator
+appVersion: 1.0.0-rc7
 description: Flux Helm Operator is a CRD controller for declarative helming
-home: https://fluxcd.io
-sources:
-- https://github.com/fluxcd/helm-operator
-maintainers:
-  - name: stefanprodan
-    email: stefan@weave.works
 engine: gotpl
+home: https://github.com/koderover/helm-operator
 icon: https://raw.githubusercontent.com/fluxcd/flux/master/docs/_files/weave-flux.png
 keywords:
-  - gitops
-  - helm
+- gitops
+- helm
+kubeVersion: '>=1.10.0-0'
+maintainers:
+- email: wuzhimin@koderover.com
+  name: Wu Zhimin
+name: helm-operator
+sources:
+- https://github.com/koderover/helm-operator
+version: 0.5.0
