--- a/chart/helm-operator/values.yaml
+++ b/chart/helm-operator/values.yaml
@@ -4,8 +4,8 @@ nameOverride: ""
 fullnameOverride: ""
 
 image:
-  repository: docker.io/fluxcd/helm-operator
-  tag: 1.0.0-rc7
+  repository: docker.io/koderover/helm-operator
+  tag: master-56a019f6
   pullPolicy: IfNotPresent
   pullSecret:
 
