--- a/chart/helm-operator/values.yaml
+++ b/chart/helm-operator/values.yaml
@@ -4,9 +4,9 @@ nameOverride: ""
 fullnameOverride: ""
 
 image:
-  repository: docker.io/fluxcd/helm-operator
-  tag: 1.0.0-rc9
-  pullPolicy: IfNotPresent
+  repository: koderover/helm-operator
+  tag: latest
+  pullPolicy: Always
   pullSecret:
 
 service:
